[tool.poetry]
name = "poetry-merge-lock"
version = "0.1.0"
description = "Poetry Merge Lock"
authors = ["Claudio Jolowicz <mail@claudiojolowicz.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/cjolowicz/poetry-merge-lock"
repository = "https://github.com/cjolowicz/poetry-merge-lock"
documentation = "https://poetry-merge-lock.readthedocs.io"

[tool.poetry.urls]
Changelog = "https://github.com/cjolowicz/poetry-merge-lock/releases"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
black = "^19.10b0"
flake8-black = "^0.1.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.1.2"
flake8-bandit = "^2.1.2"
safety = "^1.9.0"
mypy = "^0.770"
typeguard = "^2.7.1"
flake8-docstrings = "^1.5.0"
darglint = "^1.2.3"
xdoctest = "^0.12.0"
sphinx = "^3.0.3"
pep8-naming = "^0.10.0"
flake8-rst-docstrings = "^0.0.13"
sphinx-autobuild = "^0.7.1"

[tool.poetry.scripts]
poetry-merge-lock = "poetry_merge_lock.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["poetry_merge_lock"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
