[tool.poetry]
name = "poetry-merge-lock"
version = "0.1.1"
description = "poetry-merge-lock"
authors = ["Claudio Jolowicz <mail@claudiojolowicz.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/cjolowicz/poetry-merge-lock"
repository = "https://github.com/cjolowicz/poetry-merge-lock"
documentation = "https://poetry-merge-lock.readthedocs.io"

[tool.poetry.urls]
Changelog = "https://github.com/cjolowicz/poetry-merge-lock/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.0"
poetry = "^1.0.3"
tomlkit = "^0.5.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"
safety = "^1.9.0"
mypy = "^0.780"
typeguard = "^2.9.1"
xdoctest = "^0.12.0"
sphinx = "^3.0.4"
sphinx-autobuild = "^0.7.1"
pre-commit = "^2.5.0"

[tool.poetry.scripts]
poetry-merge-lock = "poetry_merge_lock.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["poetry_merge_lock"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
